--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,12 @@
       <id>mavenSnapshot</id>
       <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
     </repository>
+    		<!-- these are new and should all be vulnerable -->
+ 		<dependency>
+  		   <groupId>org.apache.logging.log4j</groupId>
+   		   <artifactId>log4j-core</artifactId>
+   		   <version>2.14.0</version>
+   		</dependency>
   </repositories>
 
   <build>
